Optimize evaluation pipeline dirty propagation