@@ -129,6 +129,26 @@ Agents should compute `S, L, R, TT` via the heuristics above and substitute into
 * `BitBoard` now caches per-piece attack contributions incrementally. When touching move application code, call the existing helpers (`markRecalc`, `updateAttackCachesAfterChange`, etc.) so both the caches and the aggregated maps stay in sync without forcing full recomputation.
 * `ActivityModule` precomputes bishop/rook watcher tables so slider updates can skip full-board scans. Pass `-Dchessengine.activity.linearScanFallback=true` to restore the legacy scan when debugging or if the watcher tables need to be bypassed.
 * Move ordering now uses per-thread bucketed buffers (TT → promotions → SEE-sorted captures → killers → quiet → bad captures) instead of a global `Arrays.sort`. Buckets reuse IntArrayList storage, tie-break on the move id to remain deterministic, and cut the `BestMoveSearchTest` runtime on the reference container from ~3m36s to ~3m14s.
+* Performance spot-check: capture `BitBoardTwst` timing with
+  ```bash
+  python - <<'PY'
+  import subprocess, time
+  cmd = [
+      "mvn", "-q",
+      "-Djava.version=21",
+      "-Dmaven.compiler.release=21",
+      "-Dmaven.compiler.enablePreview=true",
+      "-DargLine=--enable-preview",
+      "-Dtest=BitBoardTwst",
+      "-Dsurefire.failIfNoSpecifiedTests=false",
+      "test",
+  ]
+  start = time.perf_counter()
+  subprocess.run(cmd, check=True)
+  print(f"{time.perf_counter() - start:.3f}s")
+  PY
+  ```
+  before and after code changes.
 
 ### AI search & evaluation notes
 * Quiescence delta pruning now compares against the alpha window captured before the stand-pat update. Earlier builds raised `alpha` first, which meant `standPat + Δ < alpha` never triggered and the pruning shortcut was effectively disabled.
